--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  flutter_pcsc: ^0.0.4
   cupertino_icons: ^1.0.2
+  fluent_ui: ^4.7.7
+  lottie: ^2.7.0
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding
+      path: plugins/window_size
+  window_manager: ^0.2.7
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +67,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/images/binan_logo.png
+      - assets/images/whole_logo.png
+      - assets/images/logo_1.png
+      - assets/animation/scan_nfc.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -74,7 +86,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins-Regular.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins/Poppins-SemiBold.ttf
+        - asset: assets/fonts/Poppins/Poppins-Light.ttf
+          weight: 300
+
+    - family: Inter
+      fonts:
+          - asset: assets/fonts/Inter/static/Inter-SemiBold.ttf
+            weight: 300
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
