Interface and Menu Options

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
     git:
       url: https://github.com/google/flutter-desktop-embedding
       path: plugins/window_size
-  window_manager: ^0.2.7
+  window_manager: ^0.3.7
 
 dev_dependencies:
   flutter_test:
@@ -53,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -72,6 +72,10 @@ flutter:
       - assets/images/whole_logo.png
       - assets/images/logo_1.png
       - assets/animation/scan_nfc.json
+      - assets/images/graph_icon.png
+      - assets/images/home_icon.png
+      - assets/images/medal_icon.png
+      - assets/images/user_icon.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
