--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   window_manager: ^0.2.7
   objectbox: ^2.1.0
   objectbox_flutter_libs: any
-  objectbox_sync_flutter_libs: any
+  path_provider: ^2.0.15
+  analyzer: 5.13.0
 
 
 dev_dependencies:
