--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   path_provider: ^2.0.15
   analyzer: 5.13.0
   path: ^1.8.0
+  image: ^4.1.3
+  camera_windows: ^0.2.1+8
 
 
 dev_dependencies:
