--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
       - assets/images/whole_logo.png
       - assets/images/logo_1.png
       - assets/animation/scan_nfc.json
+      - assets/animation/insert_card.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
