Added functionality to save generated PDF: Updated the PDF exporting logic to incorporate saving functionality using the FilePicker plugin. The exportToPDF method now generates a PDF document and allows the user to select a location for saving the file. The generated PDF bytes are written to the selected file location.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   faker: ^2.1.0
   flutter_typeahead: ^5.0.1
   syncfusion_flutter_pdf: ^24.1.44
+  file_picker: ^4.6.1
+  file_saver: ^0.2.6
+  file_selector: ^1.0.1
 
 
 dev_dependencies:
