--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   file_selector: ^1.0.1
 
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -87,9 +88,11 @@ flutter:
   assets:
       - assets/images/binan_logo.png
       - assets/images/whole_logo.png
+      - assets/images/gym_logo.png
       - assets/images/logo_1.png
       - assets/animation/scan_nfc.json
       - assets/animation/insert_card.json
+      -
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
