--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   file_picker: ^4.6.1
   file_saver: ^0.2.6
   file_selector: ^1.0.1
+  fl_chart: ^0.66.0
+  syncfusion_flutter_charts: ^24.1.45
 
 
 
